@@ -1,4 +1,4 @@
-releases = 0.10.5 0.10.4 0.10.3 0.10.2 0.10.1 0.10.0 0.9.7 0.9.6 0.9.5 \
+releases = 0.10.6 0.10.5 0.10.4 0.10.3 0.10.2 0.10.1 0.10.0 0.9.7 0.9.6 0.9.5 \
 	0.7.1 \
 	0.8.0 0.8.1 0.8.2 0.8.3 0.8.4 0.8.5 0.8.6 0.8.7 \
         0.9.3 0.9.4
